# Proyecto_POO_RPG

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ControllerRPG/: ControladorRPG.cpp  ControladorRPG.h
Model/: BestiaAlada.cpp  BestiaAlada.h  Constructo.cpp  Constructo.h  Consumible.cpp  Consumible.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Equipable.cpp  Equipable.h  Espectro.cpp  Espectro.h  Estatua.cpp  Estatua.h  Evento.h  EventoBossFinal.cpp  EventoBossFinal.h  EventoCombate.cpp  EventoCombate.h  EventoFinal.cpp  EventoFinal.h  EventoMiniJefe.cpp  EventoMiniJefe.h  EventoObjeto.cpp  EventoObjeto.h  GranArmadura.cpp  GranArmadura.h  GranConstructo.cpp  GranConstructo.h  Habitacion.cpp  Habitacion.h  Inventario.cpp  Inventario.h  JefeFinal.cpp  JefeFinal.h  Jugador.cpp  Jugador.h  Mago.cpp  (+9 more)
ViewRPG/: Vista.cpp  Vista.h
